// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaGallerySection component renders correctly 1`] = `
<div>
  <div
    class="MediaGallerySection Section-root Section-alabaster css-cxq310"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1149tz3-MuiGrid2-root"
          data-testid="grid-container"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-lg-8 Grid-item css-vhjime-MuiGrid2-root"
            data-testid="grid-item"
          >
            <h2
              class="MuiTypography-root MuiTypography-h2 Typography-underline css-ta8c5q-MuiTypography-root"
              data-testid="typography"
            >
              Lorem ipsum
            </h2>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 Grid-item css-1u4rfa8-MuiGrid2-root"
            data-testid="grid-item"
          >
            <div
              class="css-2bw4l8"
            >
              <div
                class=" css-79elbk"
              >
                <div
                  class="gatsby-image-wrapper gatsby-image-wrapper-constrained MediaGallery-mainImageWrapperCover MediaGallery-mainImageWrapperdefault css-1kr98xg-Media"
                  data-gatsby-image-wrapper=""
                  style="position: relative; overflow: hidden; display: inline-block; vertical-align: top;"
                >
                  <div
                    style="max-width: 948px; display: block;"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      role="presentation"
                      src="data:image/svg+xml;charset=utf-8,%3Csvg height='720' width='948' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
                      style="max-width: 100%; display: block; position: static;"
                    />
                  </div>
                  <div
                    aria-hidden="true"
                    data-placeholder-image=""
                    style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
                  />
                  <picture>
                    <source
                      data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=webp 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=webp 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=webp 948w"
                      sizes="(min-width: 948px) 948px, 100vw"
                      type="image/webp"
                    />
                    <img
                      alt="Lorem ipsum image alt text"
                      data-gatsby-image-ssr=""
                      data-main-image=""
                      data-src="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png"
                      data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=png 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=png 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png 948w"
                      decoding="async"
                      draggable="false"
                      loading="lazy"
                      sizes="(min-width: 948px) 948px, 100vw"
                      style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; object-fit: cover; object-position: center; opacity: 0;"
                    />
                  </picture>
                  <noscript />
                  <script
                    type="module"
                  >
                    const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1,e.parentNode.parentNode.querySelector("[data-placeholder-image]").style.opacity=0)}}
                  </script>
                </div>
              </div>
              <div
                class="css-1tlzhc3"
                data-testid="thumbnails-root"
              >
                <button
                  aria-label="Scroll left"
                  class="MuiButtonBase-root  ThumbScrollerButton-left css-1qq5z22-MuiButtonBase-root"
                  data-testid="thumbnail-scroller-left"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ThumbScrollerButton-icon css-i4bv87-MuiSvgIcon-root"
                    data-testid="ChevronLeftIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
                <button
                  aria-label="Scroll right"
                  class="MuiButtonBase-root MediaGallery-thumbScrollerHidden ThumbScrollerButton-right css-1qq5z22-MuiButtonBase-root"
                  data-testid="thumbnail-scroller-right"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ThumbScrollerButton-icon css-i4bv87-MuiSvgIcon-root"
                    data-testid="ChevronRightIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
                <div
                  class="css-1ojsfml"
                  data-testid="thumbnail-scroller"
                  style="margin-right: 0%;"
                >
                  <button
                    class="MuiButtonBase-root MediaGallery-thumbnail Thumbnail-selected Thumbnail-large Thumbnail-selected css-yh72z7-MuiButtonBase-root"
                    data-gtm="{\\"id\\":\\"media-gallery1\\",\\"label\\":\\"Lorem ipsum image alt text\\",\\"action\\":\\"//image.asset.jpg\\"}"
                    data-testid="default-thumbnail"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="gatsby-image-wrapper gatsby-image-wrapper-constrained  css-7mgsqw-Media"
                      data-gatsby-image-wrapper=""
                      style="position: relative; overflow: hidden; display: inline-block; vertical-align: top;"
                    >
                      <div
                        style="max-width: 948px; display: block;"
                      >
                        <img
                          alt=""
                          aria-hidden="true"
                          role="presentation"
                          src="data:image/svg+xml;charset=utf-8,%3Csvg height='720' width='948' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
                          style="max-width: 100%; display: block; position: static;"
                        />
                      </div>
                      <div
                        aria-hidden="true"
                        data-placeholder-image=""
                        style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
                      />
                      <picture>
                        <source
                          data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=webp 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=webp 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=webp 948w"
                          sizes="(min-width: 948px) 948px, 100vw"
                          type="image/webp"
                        />
                        <img
                          alt="Lorem ipsum image alt text"
                          data-gatsby-image-ssr=""
                          data-main-image=""
                          data-src="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png"
                          data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=png 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=png 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png 948w"
                          decoding="async"
                          draggable="false"
                          loading="lazy"
                          sizes="(min-width: 948px) 948px, 100vw"
                          style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; object-fit: cover; object-position: center; opacity: 0;"
                        />
                      </picture>
                      <noscript />
                      <script
                        type="module"
                      >
                        const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1,e.parentNode.parentNode.querySelector("[data-placeholder-image]").style.opacity=0)}}
                      </script>
                    </div>
                  </button>
                  <button
                    class="MuiButtonBase-root MediaGallery-thumbnail Thumbnail-large css-yh72z7-MuiButtonBase-root"
                    data-gtm="{\\"id\\":\\"media-gallery1\\",\\"label\\":\\"Lorem ipsum video label\\",\\"action\\":\\"//video-image.asset.jpg\\"}"
                    data-testid="default-thumbnail"
                    style="background-image: url(//video-image.asset.jpg);"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="css-18rjrey"
                    >
                      Lorem ipsum video label
                    </span>
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Thumbnail-playIcon css-7r6ast-MuiSvgIcon-root"
                      data-testid="thumbnail-play-icon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8 5v14l11-7z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MediaGallerySection component renders correctly with long description 1`] = `
<div>
  <div
    class="MediaGallerySection Section-root Section-alabaster css-cxq310"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1149tz3-MuiGrid2-root"
          data-testid="grid-container"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-lg-8 Grid-item css-vhjime-MuiGrid2-root"
            data-testid="grid-item"
          >
            <h2
              class="MuiTypography-root MuiTypography-h2 Typography-underline css-ta8c5q-MuiTypography-root"
              data-testid="typography"
            >
              Lorem ipsum
            </h2>
            <div
              class="description"
            >
              <div
                class="RichText-root css-qiddyp"
              >
                <h2
                  class="MuiTypography-root MuiTypography-h2 RichText-title css-ta8c5q-MuiTypography-root"
                  data-testid="typography"
                >
                  Heading 2
                </h2>
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-abi5v8-MuiTypography-root"
                  data-testid="typography"
                >
                  this is a test paragraph
                </p>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 Grid-item css-1u4rfa8-MuiGrid2-root"
            data-testid="grid-item"
          >
            <div
              class="css-2bw4l8"
            >
              <div
                class=" css-79elbk"
              >
                <div
                  class="gatsby-image-wrapper gatsby-image-wrapper-constrained MediaGallery-mainImageWrapperCover MediaGallery-mainImageWrapperdefault css-1kr98xg-Media"
                  data-gatsby-image-wrapper=""
                  style="position: relative; overflow: hidden; display: inline-block; vertical-align: top;"
                >
                  <div
                    style="max-width: 948px; display: block;"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      role="presentation"
                      src="data:image/svg+xml;charset=utf-8,%3Csvg height='720' width='948' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
                      style="max-width: 100%; display: block; position: static;"
                    />
                  </div>
                  <div
                    aria-hidden="true"
                    data-placeholder-image=""
                    style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
                  />
                  <picture>
                    <source
                      data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=webp 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=webp 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=webp 948w"
                      sizes="(min-width: 948px) 948px, 100vw"
                      type="image/webp"
                    />
                    <img
                      alt="Lorem ipsum"
                      data-gatsby-image-ssr=""
                      data-main-image=""
                      data-src="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png"
                      data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=png 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=png 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png 948w"
                      decoding="async"
                      draggable="false"
                      loading="lazy"
                      sizes="(min-width: 948px) 948px, 100vw"
                      style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; object-fit: cover; object-position: center; opacity: 0;"
                    />
                  </picture>
                  <noscript />
                  <script
                    type="module"
                  >
                    const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1,e.parentNode.parentNode.querySelector("[data-placeholder-image]").style.opacity=0)}}
                  </script>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
